# thouzer_ros

./: .gitignore  .gitmodules  .melodic_depends.rosinstall  README.md  docker-compose.yaml
docker/: Dockerfile  build.sh
thouzer_bringup/: CMakeLists.txt  package.xml
thouzer_bringup/launch/: thouzer_remote_debugger.launch  thouzer_robot.launch
thouzer_bringup/rviz/: thouzer.rviz
thouzer_description/: CMakeLists.txt  package.xml
thouzer_description/launch/: ether_urg_tf.launch  robot_description.launch
thouzer_driver/: CMakeLists.txt  package.xml
thouzer_driver/config/: mqtt-test.yaml  mqtt.yaml
thouzer_driver/launch/: ether_urg.launch  mqtt.launch
thouzer_driver/scripts/: cmd_vel.py  commander.py  odom.py  watchdog.py
thouzer_driver/test/: commander_node.test
thouzer_driver/test/unit/: commander_node_test.py
thouzer_msgs/: CMakeLists.txt  package.xml
thouzer_msgs/msg/: App.msg  Battery.msg  Commander.msg  Odom.msg  Vel.msg
thouzer_navigation/: CMakeLists.txt  package.xml
thouzer_navigation/config/: base_local_planner_params.yaml  costmap_common_params.yaml  global_costmap_params.yaml  local_costmap_params.yaml  navigate.yaml
thouzer_navigation/launch/: amcl.launch  emcl.launch  laser_scan_matcher.launch  move_base.launch  neonavigation.launch  thouzer_navigation.launch
thouzer_navigation/rviz/: thouzer_neonavigation.rviz
thouzer_navigation/saved_waypoints/: waypoints.csv  waypoints_startlock.csv
thouzer_slam/: CMakeLists.txt  package.xml
thouzer_slam/launch/: slam_gmapping.launch
thouzer_slam/maps/: 3f-all-startlock-wideopendoor-top-urg.pgm  3f-all-startlock-wideopendoor-top-urg.yaml  3f-all-startlock-wideopendoor.pgm  3f-all-startlock-wideopendoor.yaml  3f-all-wideopendoor.pgm  3f-all-wideopendoor.yaml  mymap.pgm  mymap.yaml
thouzer_teleop/: CMakeLists.txt  package.xml
thouzer_teleop/launch/: keyboard.launch  logicool.launch
thouzer_teleop/scripts/: logicool_cmd_vel.py
