<?xml version="1.0"?>
<package format="2">
  <name>thouzer_bringup</name>
  <version>0.0.0</version>
  <description>The thouzer_bringup package</description>

  <maintainer email="support@rt-net.jp">RT Corporation</maintainer>

  <license>Apache-2.0</license>

  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>rviz</exec_depend>
  <exec_depend>rt_usb_9axisimu_driver</exec_depend>
  <exec_depend>thouzer_description</exec_depend>
  <exec_depend>thouzer_driver</exec_depend>
  <test_depend>roslaunch</test_depend>

  <export>

  </export>
</package>
