<?xml version="1.0"?>
<package format="2">
  <name>thouzer_description</name>
  <version>0.0.0</version>
  <description>The thouzer_description package</description>

  <maintainer email="support@rt-net.jp">RT Corporation</maintainer>

  <license>Apache-2.0</license>
  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>tf</exec_depend>
  <test_depend>roslaunch</test_depend>

  <export>
  </export>
</package>
