<?xml version="1.0"?>
<package format="2">
  <name>thouzer_slam</name>
  <version>0.0.0</version>
  <description>The thouzer_slam package</description>

  <maintainer email="support@rt-net.jp">RT Corporation</maintainer>

  <license>Apache-2.0</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>rospy</depend>
  <exec_depend>slam_gmapping</exec_depend>


  <export>

  </export>
</package>
